gcc/testsuite/rust/rustc/ui/proc-macro/invalid-punct-ident-3.rs
//@ aux-build:invalid-punct-ident.rs
//@ needs-unwind proc macro panics to report errors

#[macro_use]
extern crate invalid_punct_ident;

invalid_raw_ident!(); // { dg-error "" "" { target *-*-* } }

fn main() {}

